--- a/ESBToILIntegrations/pom.xml
+++ b/ESBToILIntegrations/pom.xml
@@ -2,9 +2,7 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.pru</groupId>
 	<artifactId>ESBToILIntegrations</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 
 	<parent>
 		<groupId>com.pru</groupId>
@@ -13,6 +11,10 @@
 	</parent>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.pru</groupId>
+			<artifactId>model</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>com.sun.xml.messaging.saaj</groupId>
 			<artifactId>saaj-impl</artifactId>
