--- a/integration-model/pom.xml
+++ b/integration-model/pom.xml
@@ -5,14 +5,13 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>model</artifactId>
-	<name>model</name>
+	<artifactId>integration-model</artifactId>
+	<name>integration-model</name>
 	<parent>
 		<groupId>com.pru</groupId>
-		<artifactId>esbintegration</artifactId>
+		<artifactId>esb-integration</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
