--- a/ESBToILIntegrations/pom.xml
+++ b/ESBToILIntegrations/pom.xml
@@ -2,18 +2,18 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>ESBToILIntegrations</artifactId>
+	<artifactId>esb-to-il-integration</artifactId>
 
 	<parent>
 		<groupId>com.pru</groupId>
-		<artifactId>esbintegration</artifactId>
+		<artifactId>esb-integration</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.pru</groupId>
-			<artifactId>model</artifactId>
+			<artifactId>integration-model</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.xml.messaging.saaj</groupId>
