--- a/epos-to-esb-integration/src/main/resources/config.properties
+++ b/epos-to-esb-integration/src/main/resources/config.properties
@@ -1,4 +1,7 @@
+#bootstrap.servers=aafprholdkaf007:9093
 bootstrap.servers=localhost:9092
+security.protocol=SASL_SSL
+sasl.mechanism=PLAIN
 zookeeper.connect=localhost:2181
 policy.proposal.topic=policyProposal
 newBusiness.proposal.topic=newBusinessProposal
