--- a/epos-to-esb-integration/src/main/resources/epos-to-policyproposal-mapping.properties
+++ b/epos-to-esb-integration/src/main/resources/epos-to-policyproposal-mapping.properties
@@ -11,7 +11,6 @@ newbusiness.contract.methodOfPayment=$.quotation.initialPaymentMethod
 newbusiness.contract.originalCommencementDate=$.assured.createdAt
 #newbusiness.contract.planSuffix=
 newbusiness.contract.register=$.assured.country
-newbusiness.contract.contractcurrency=$.quotation.currency
 #newbusiness.contract.accountType=
 
 #newbusiness.owner.ownerId=
@@ -22,12 +21,9 @@ newbusiness.contract.contractcurrency=$.quotation.currency
 newbusiness.lives.anbAge=$.assured.age
 newbusiness.lives.dateOfBirth=$.assured.dateOfBirth
 #newbusiness.lives.selection=
-newbusiness.lives.occupationCode=assured.workPay.occupations.0.occupation
-newbusiness.lives.relationshipToLifeInsured=beneficiary.basicPlan.0.relationship
 newbusiness.lives.hight=$.assured.medical.height
 newbusiness.lives.weight=$.assured.medical.weight
-newbusiness.lives.smokingIndicator=$.assured.lifestyle.smoke
-newbusiness.lives.sex=$.assured.gender
+
 
 #newbusiness.jointLives.anbAge=
 #newbusiness.jointLives.dateOfBirth=
@@ -130,6 +126,11 @@ newbusiness.beneficiary.percentage=$.beneficiary.basicPlan.0.beneficiaryPercenta
 #newbusiness.fundDetails.renewalMonths10=
 #newbusiness.fundDetails.yearsInForce10=
 
+newbusiness.client.id=$.assured.clientId
+newbusiness.client.party=$.assured.clientId
+newbusiness.client.clientNumber=$.assured.clientId
+#newbusiness.client.clientDob=
+
 #newbusiness.bank.dateFrom=
 
 #newbusiness.mandate.effectiveDate=
@@ -209,10 +210,6 @@ newbusiness.beneficiary.percentage=$.beneficiary.basicPlan.0.beneficiaryPercenta
 #newbusiness.fundDetails.unitLinkedFund9=
 #newbusiness.fundDetails.unitLinkedFund10=
 
-newbusiness.client.id=$.assured.clientId
-newbusiness.client.party=$.assured.clientId
-newbusiness.client.clientNumber=$.assured.clientId
-#newbusiness.client.clientDob=
 #newbusiness.client.clientType=
 #newbusiness.client.addressType=
 newbusiness.client.birthPlace=$.assured.additionalPersonalInformation.cityPermanent
@@ -225,7 +222,7 @@ newbusiness.client.postalCode=$.assured.zipcode
 newbusiness.client.phone1=$.assured.phone
 #newbusiness.client.phone2=
 newbusiness.client.sex=$.assured.gender
-newbusiness.client.countryCode=$.assured.country
+newbusiness.client.countryCode=$.assured.phoneCountryCode
 #newbusiness.client.directMailIndicator=
 #newbusiness.client.documentNumber=
 #newbusiness.client.emailAddress=
@@ -234,10 +231,10 @@ newbusiness.client.givenName=$.assured.name.first
 newbusiness.client.surname=$.assured.name.last
 #newbusiness.client.language=
 #newbusiness.client.mailingIndicator=
-newbusiness.client.marriedIndicator=$.assured.additionalPersonalInformation.civilStatus
+newbusiness.client.marriedIndicator=$.assured.additionalPersonalInformation.civilStatus.code
 #newbusiness.client.middleName1=
 #newbusiness.client.middleName2=
-newbusiness.client.nationality=$.assured.additionalPersonalInformation.nationality
+newbusiness.client.nationality=$.assured.additionalPersonalInformation.nationalitycode
 newbusiness.client.occupationCode=$.assured.workPay.occupations.0.occupation
 #newbusiness.client.prefCom=
 newbusiness.client.longSalutation=$.assured.name.title
