--- a/esb-to-il-integration/pom.xml
+++ b/esb-to-il-integration/pom.xml
@@ -12,6 +12,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.2.3</version>
+		</dependency>
+		<dependency>
 			<groupId>com.pru</groupId>
 			<artifactId>integration-model</artifactId>
 		</dependency>
