--- a/esb-to-il-integration/src/main/resources/flink-config/flink-kafka-config.properties
+++ b/esb-to-il-integration/src/main/resources/flink-config/flink-kafka-config.properties
@@ -1,4 +1,7 @@
+#bootstrap.servers=aafprholdkaf007:9093
 bootstrap.servers=localhost:9092
+security.protocol=SASL_SSL
+sasl.mechanism=PLAIN
 newbusiness.proposal.topic.name=newBusinessProposal
 zookeeper.connect=localhost:2181
 group.id=ilResponse
